--- a/index.ipynb
+++ b/index.ipynb
@@ -99,6 +99,8 @@
     "    print(\"Monday\")\n",
     "elif today_is == 2:\n",
     "    print(\"Tuesday\")\n",
+    "elif today_is == 3:\n",
+    "    print(\"Wednesd\")\n",
     "else:\n",
     "    print(\"other\")\n",
     "    \n"
