Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -94,13 +94,14 @@
    ],
    "source": [
     "today_is = 1\n",
-    "day_of_the_week = \"Wednesday\"\n",
     "if today_is == 1:\n",
     "    print(\"Monday\")\n",
     "elif today_is == 2:\n",
     "    print(\"Tuesday\")\n",
     "elif today_is == 3:\n",
-    "    print(\"Wednesd\")\n",
+    "    print(\"Wednesday\")\n",
+    "elif today_is == 3:\n",
+    "    print(\"Wednesday\")\n",
     "else:\n",
     "    print(\"other\")\n",
     "    \n"
