Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -102,10 +102,12 @@
     "    print(\"Tuesday\")\n",
     "elif today_is == 4:\n",
     "    print(\"Wednesday\")\n",
-    "    elif today_is == 3:\n",
-    "    print(\"Wednesday\")\n",
+    "elif today_is == 5:\n",
+    "    print(\"Thursday\")\n",
+    "elif today_is == 6:\n",
+    "    print(\"Friday\")\n",
     "else:\n",
-    "    print(\"other\")\n",
+    "    print(\"S\")\n",
     "    \n"
    ]
   },
