Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,19 +81,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Monday\n"
+      "Wednesday\n"
      ]
     }
    ],
    "source": [
-    "today_is = 1\n",
+    "today_is = 4\n",
     "if today_is == 1:\n",
     "    print(\"Sunday\")\n",
     "elif today_is == 2:\n",
@@ -107,7 +107,7 @@
     "elif today_is == 6:\n",
     "    print(\"Friday\")\n",
     "else:\n",
-    "    print(\"S\")\n",
+    "    print(\"Saturday\")\n",
     "    \n"
    ]
   },
