Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -124,9 +124,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "string = \"Python\"\n",
-    "sub_string = \"on\"\n",
-    "ends_with = None\n",
+    "string = \"School\"\n",
+    "sub_string = \"cool\"\n",
+    "ends_with = \"\"\n",
     "# conditionals go here"
    ]
   },
