Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -125,8 +125,7 @@
    "outputs": [],
    "source": [
     "string = \"School\"\n",
-    "sub_string = \"cool\"\n",
-    "ends_with = \"\"\n",
+    "ends_with = \"cool\"\n",
     "# conditionals go here"
    ]
   },
