Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,11 +120,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "string = \"School\"\n",
+    "sub_string = \n",
     "ends_with = \"cool\"\n",
     "# conditionals go here"
    ]
