Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -125,7 +125,7 @@
    "outputs": [],
    "source": [
     "string = \"School\"\n",
-    "sub_string = \n",
+    "if sub_string == \n",
     "ends_with = \"cool\"\n",
     "# conditionals go here"
    ]
