Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -125,8 +125,8 @@
    "outputs": [],
    "source": [
     "string = \"School\"\n",
-    "if sub_string == \n",
-    "ends_with = \"cool\"\n",
+    "if string.ends_with == \"cool\"\n",
+    "    ends_with = \"cool\"\n",
     "# conditionals go here"
    ]
   },
