--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,7 @@
    "source": [
     "string = \"School\"\n",
     "if string.ends_with == \"cool\"\n",
-    "    ends_with = \"cool\"\n",
+    "    print(\"True\")\n",
     "# conditionals go here"
    ]
   },
