Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,6 +127,7 @@
     "string = \"School\"\n",
     "if string.ends_with == \"cool\"\n",
     "    print(\"True\")\n",
+    "else:\n",
     "# conditionals go here"
    ]
   },
