Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -126,8 +126,9 @@
    "source": [
     "string = \"School\"\n",
     "if string.ends_with == \"cool\"\n",
-    "    print(\"True\")\n",
+    "    print(1)\n",
     "else:\n",
+    "    print(0)\n",
     "# conditionals go here"
    ]
   },
