--- a/index.ipynb
+++ b/index.ipynb
@@ -120,21 +120,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-17-0ff0073e22f2>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-18-10e6a5840d60>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-0ff0073e22f2>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if string.ends_with == \"cool\"\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-10e6a5840d60>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if string.ends_with == 'cool'\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "string = \"School\"\n",
-    "if string.ends_with == \"cool\"\n",
+    "if string.ends_with == 'cool'\n",
     "    print(1)\n",
     "else:\n",
     "    print(0)\n",
