--- a/index.ipynb
+++ b/index.ipynb
@@ -120,21 +120,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-21-49692b036435>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-22-21b71b594970>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-49692b036435>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if string.ends_with == 'cool'\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-21b71b594970>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    if string.ends_with == sub_string\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "string = \"School\"\n",
-    "if string.ends_with == 'cool'\n",
+    "sub_string = \"cool\"\n",
+    "if string.ends_with == sub_string\n",
     "    bool(1)\n",
     "else:\n",
     "    bool(0)\n",
