Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,7 @@
    ],
    "source": [
     "string = \"School\"\n",
-    "if string.ends_with() == \"cool\":\n",
+    "if string.endswith(\"coo\") == \"cool\":\n",
     "    bool(1)\n",
     "else:\n",
     "    bool(0)\n",
