Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,8 +127,10 @@
     "string = \"School\"\n",
     "if string.endswith(\"cool\"):\n",
     "    bool(1)\n",
+    "    print(\"yes\")\n",
     "else:\n",
-    "    bool(0)"
+    "    bool(0)\n",
+    "    print(\"\")"
    ]
   },
   {
