Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,17 +120,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "string = \"School\"\n",
     "if string.endswith(\"cool\"):\n",
     "    bool(1)\n",
-    "    print(\"yes\")\n",
+    "    print(\"True\")\n",
     "else:\n",
     "    bool(0)\n",
-    "    print(\"\")"
+    "    print(\"False\")"
    ]
   },
   {
